<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddMeal">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_scrolling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mealImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="#DDD"
                android:contentDescription="@string/meal_images"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/selectImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_gallery" />

            <Button
                android:id="@+id/takePhotoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Simple Meal Description"
                android:hint="@string/meal_description_max_150_chars"
                android:inputType="textLongMessage"
                android:maxLength="150"
                android:textColor="#000000"
                android:textColorHighlight="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submitMealBtn"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/submit_meal" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>